--- a/Rec2-main/Rec2-main/header.css
+++ b/Rec2-main/Rec2-main/header.css
@@ -68,4 +68,21 @@
         color: black;
         display: block;
     }
+    .opcoes{
+        display: flex;
+    }
+    .opcoes__item{
+    padding: 0 1em;
+    }
+    .opcoes__link{
+        text-decoration: none;
+        color:var(--preto);
+    }
+    .container__imagem--transparente{
+        display:none
+    }
+    .cabecalho__menu-hamburguer{
+        display:none
+    }
+
 }
