--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
-@import url(styles/grid.css);
 @import url(styles/header.css);
-
+@import url(styles/grid.css);
 :root{
+    --cor-de-fundo: #e5e5e5;
     --branco: #FFFFFF;
-    --cor-de-fundo: #e0dcdc;
-    --amarelo: #ffe70d;
-    --fontesecundária: font-family: 'Handjet', cursive;
-    background-color: rgb(209,223,206,100%) ;
+    --amarelo:  #FECD2F;
+    --roxo-degrade: 
+    linear-gradient(94.49deg,  #733887 35.48%,  #C75EEB 143.32%);
+
+}
+body{
+    background-color: var(--cor-de-fundo);
 }
