--- a/styles/grid.css
+++ b/styles/grid.css
@@ -1,6 +1,6 @@
 .Imagem{
-    width: 80px!important;
-    height: 60px!important;
+    width: 60px!important;
+    height: 40px!important;
 }
 .div-todasimagens{
     display: grid;
@@ -8,28 +8,30 @@
     text-align: center;
     margin-top: 25px;
     position: inherit;
+
 }
 .titulo{
-    font-size: 30px;
-    color:rgb(0, 141, 73, 100%);;
+    font-size: 10px;
+    color: rgb(146, 83, 204);
     margin-bottom: 7px;
     text-align: center;
 }
-
-@media screen {min-width: 1024px};   
-
-.titulo{
-    display:block;
-    font-size: 20px;
-
+.secao_banner{
+display: none;
 }
-.Imagem{
-    height: 10px;
-    border-top: 10px groove rgb(83, 189, 223, 100%);
-    border-left:10px groove rgb(83, 189, 223, 100%); 
-    border-right: 10px groove rgb(83, 189, 223, 100%);;
-    border-bottom: 10px groove rgb(83, 189, 223, 100%);
-    width: 180px!important;
-    height: 160px!important;
-}   
+@media screen and (min-width: 1024px) {
+    .Imagem{
+        border-top: 10px groove rgb(0, 0, 0);
+        border-left: 10px groove rgb(0, 0, 0);
+        border-right: 10px groove rgb(0, 0, 0);
+        border-bottom:10px groove rgb(0, 0, 0);
+    }
+    .titulo{
+        font-size: 30px;
+        color: rgb(2, 46, 46);
+    }
+    .secao_banner{
+        width: 100%;
+        display: block;
+    }
 }
