--- a/styles/header.css
+++ b/styles/header.css
@@ -15,57 +15,92 @@
     position: relative;
 }
 
-.logo_costas{
-    width: 44px;
-    height: 44px;
-}
 .container{
     display: flex;
     align-items: center;
+
 }
 .container__imagem{
     padding: 1em;
+
 }
 
 .lista-menu{
     display: none;
     position: absolute;
     top: 100%;
-    background-color: rgb(25, 158, 158);
+    background: var(--branco);
     width: 60vw;
 }
 
 .container__botao{
-    display: none;
+  display: none;
 }
 
 .container__botao:checked~ .lista-menu{
+  display: block;
+}
+
+.Titulo_Li{
+  color: var(--amarelo);
+}
+
+.Item_Li{
+  background: var(--roxo-degrade);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-transform: uppercase;
+}
+
+.Titulo_Li, .Item_Li{
+  padding: 1em;
+  background-color: var(--branco)
+}
+
+.titulo_W {
+  display: none;
+}
+
+.opcoes{
+  display: none;
+}
+@media screen and (min-width:1024px){
+  .titulo_W{
+    font-size: 25px;
+    color: rgb(190, 45, 248);
     display: block;
+  }
+
+
+.opcoes {
+  display: flex;
 }
 
-.lista-menu_titulo{
-    color: rgb(25, 158, 158);
+.opcoes-li{
+  padding: 0 1em;
 }
 
-.lista-menu_item{
-    background: var(--roxo-degrade);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: var(--branco);
-    background-clip: text;
-    text-transform: uppercase;
+.Item_Li{
+  text-decoration: none;
+  color: rgb(0, 0, 0);
 }
 
-.lista-menu_titulo, .lista-menu_item{
-    padding: 1em;
-    background-color: var(--branco);
+.container__imagem--transparente{
+  display: none;
 }
-.titulo__cabecalho{
-    display: none;
+
+.titulo_W{
+  display: none;
 }
-@media screen and (min-width: 1024px) {
-    .titulo__cabecalho{
-        font-size: 30px;
-        color: rgb(83, 189,223, 100%);
-        display: block;
-    }
+
+.opcoes-bot:checked~.lista-menu{
+  display: block;
+  width: auto;
+}
+
+.opcoes-bot{
+  display: none;
+}
+
 }
